--- a/src/PopupMsg.css
+++ b/src/PopupMsg.css
@@ -1,11 +1,11 @@
 #PopupMsg-main {
     --PopupMsg-width: 18rem;
-    --PopupMsg-height: 2.4rem;
+    --PopupMsg-height: 2rem;
     --icon-size: 1.8rem;
 
-    visibility: hidden;
-    position: sticky;
-    bottom: .5rem;
+    display: none;
+    position: fixed;
+    top: calc(100vh - var(--PopupMsg-height) - 2rem);
     right: .5rem;
     z-index: 3;
 
@@ -17,24 +17,20 @@
     padding: .8rem .9rem;
     overflow: hidden;
     
-    display: grid;
+    /* set when appearing */
+    /* display: grid; */
     grid-template-columns: var(--icon-size) calc(var(--PopupMsg-width) - var(--icon-size) - .6rem);
     gap: .6rem;
 
-    -webkit-transition: height .4s ease-out;
-    -moz-transition: height .4s ease-out;
-    -o-transition: height .4s ease-out;
-    -ms-transition: height .4s ease-out;
-    transition: height .4s ease-out;
+    -webkit-transition: all .4s ease-out;
+    -moz-transition: all .4s ease-out;
+    -o-transition: all .4s ease-out;
+    -ms-transition: all .4s ease-out;
+    transition: all .4s ease-out;
 }
 #PopupMsg-main:hover {
+    top: calc(100vh - 2 * var(--PopupMsg-height) - 2rem);
     height: calc(2 * var(--PopupMsg-height));
-
-    -webkit-transition: height .4s ease-out;
-    -moz-transition: height .4s ease-out;
-    -o-transition: height .4s ease-out;
-    -ms-transition: height .4s ease-out;
-    transition: height .4s ease-out;
 }
 
 #PopupMsg-main > svg {
