--- a/src/SignIn_SignUp.css
+++ b/src/SignIn_SignUp.css
@@ -6,20 +6,20 @@
     --signup-width: 25rem;
     --signup-height: 24.5rem;
 
-    visibility: hidden;
-    position: absolute;
+    display: none;
+    position: fixed;
     top: 0;
     left: 0;
     z-index: 1;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
 
     background-color: rgba(0, 0, 0, .7);
 }
 
 #signin-popup,
 #signup-popup {
-    position: absolute;
+    position: fixed;
     z-index: 2;
     padding: 1rem;
 
